--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  </head>
+  </head <meta name="viewport" content="width=device-width, initial-scale=1.0">
+>
 <body class="bg-green-100 min-h-screen flex flex-col items-center p-6">
   
   <!-- Header -->
